--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
+    "dateformat": "^2.0.0",
     "react": "15.2.1",
     "react-dom": "15.2.1"
   }
