--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "bower-webpack-plugin": "^0.1.9",
     "dateformat": "^2.0.0",
+    "http-client": "^4.3.1",
     "jquery": "^3.1.1",
     "react": "15.2.1",
-    "react-dom": "15.2.1"
+    "react-dom": "15.2.1",
+    "request": "^2.79.0"
   }
 }
