--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dateformat": "^2.0.0",
     "jquery": "^3.1.1",
     "react": "15.2.1",
-    "react-dom": "15.2.1"
+    "react-dom": "15.2.1",
+    "youtube-api-search": "0.0.5"
   }
 }
